# kde_cpi

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  README.md  cu.txt  docker-compose.yml  enhancements.md  pyproject.toml  requirements.txt  ruff_lint.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yaml  docs.yaml  pr_merge.yaml  pr_open.yaml  publish-to-test-pypi.yml  release.yml
docs/: conf.py  index.rst
docs/api/: cli.main.rst  cli.rst  kde_cpi.data.client.rst  kde_cpi.data.files.rst  kde_cpi.data.ingest.rst  kde_cpi.data.loader.rst  kde_cpi.data.models.rst  kde_cpi.data.parser.rst  kde_cpi.data.pipeline.rst  kde_cpi.data.rst  kde_cpi.logging.rst  kde_cpi.math.rst  kde_cpi.math.stats.rst  kde_cpi.math.utils.rst  kde_cpi.output.plots.rst  kde_cpi.output.rst  kde_cpi.output.utils.rst  kde_cpi.rst  kde_cpi.series.rst  kde_cpi.series.views.rst  modules.rst
init.d/: 001_create_cpi_tables.sql
notebooks/: time_series.ipynb
papers/: intro.md  kde_cpi_manual.md  kde_mode_service.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/kde_cpi/: __init__.py  logging.py
src/kde_cpi/data/: __init__.py  client.py  files.py  ingest.py  loader.py  models.py  parser.py  pipeline.py
src/kde_cpi/math/: __init__.py  stats.py  utils.py
src/kde_cpi/output/: __init__.py  plots.py  utils.py
src/kde_cpi/series/: __init__.py  views.py
tests/: conftest.py  test_loader.py  test_logging.py
tests/cli/: test_main.py
tests/data/: test_client.py  test_ingest.py  test_loader.py  test_models.py  test_parser.py  test_pipeline.py
tests/math/: test_stats.py  test_utils.py
tests/output/: test_output_utils.py  test_plots.py
tests/series/: test_views.py
