[build-system]
requires = ["setuptools>=80", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kde-cpi"
dynamic = ["version"]
description = "Tools for ingesting BLS CPI flat files and loading them into PostgreSQL."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jacob Bourne", email = "jacob.bourne@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "arrow>=1.4,<2",
    "attrs>=23,<26",
    "asyncpg>=0.30,<1",
    "click>=8.1,<9",
    "marshmallow>=3.22,<5",
    "matplotlib>=3.8,<4",
    "numpy>=2.0,<3",
    "pandas>=2.0,<3",
    "requests>=2.31,<3",
    "scikit-learn>=1.4,<2",
    "scipy>=1.12,<2",
    "seaborn>=0.13,<1",
    "tqdm>=4.66,<5",
    "structlog>=24,<26",
]
keywords = ["CPI", "inflation", "economics", "KDE", "BLS", "time-series"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
kde-cpi = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/JakeFAU/kde_cpi"
Repository = "https://github.com/JakeFAU/kde_cpi"
Issues = "https://github.com/JakeFAU/kde_cpi/issues"
Documentation = "https://github.com/JakeFAU/kde_cpi#readme"

[project.optional-dependencies]
doc = ["sphinx", "sphinx-autodoc-typehints", "furo", "sphinx-copybutton"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-sugar",
    "pytest-timeout",
    "tox",
]
dev = ["ruff", "mypy", "pre-commit", "types-requests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kde_cpi = ["py.typed", "data/*.json", "schemas/*.yaml"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "src/kde_cpi/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -n auto"
testpaths = ["tests"]
markers = ["unit", "integration"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4"]
ignore = ["E203", "S608"]
preview = false

[tool.ruff.lint.isort]
known-first-party = ["kde_cpi"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
exclude = "^tests/"

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "tests.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.coverage.run]
source = ["kde_cpi"]
branch = true
omit = ["tests/*", "src/kde_cpi/_version.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
omit = ["*/__main__.py"]
exclude_lines = ["if __name__ == '__main__':", "# pragma: no cover"]

[tool.coverage.paths]
source = ["src/kde_cpi", ".tox/*/site-packages/kde_cpi"]

[tool.coverage.html]
directory = "htmlcov"
title = "KDE-CPI Coverage Report"
